--- a/intex.html
+++ b/intex.html
@@ -9,7 +9,7 @@
        <p>Nama: Aliya</p>
        <p>Email: aliyaal010705@gmail.com</p>
        <p>Telepon: 081919306561</p>
-      <p>github <a href="https://github.com/Aliyaal02/html" target="_blank">https://github.com/Aliyaal02/html</a>
+      <p>github <a href="https://github.com/Aliyaal02/tugas-biodata-sederhana-main.git" target="_blank">https://github.com/Aliyaal02</a>
    
        <form >Hubungi Saya</form>
         <label>Nama: <input type="text"></label><br />
