--- a/intex.html
+++ b/intex.html
@@ -2,6 +2,77 @@
     <head>
         <title>Halaman Biodata Sederhana</title>
     </head>
+        <style>
+            
+        body {
+            background-color: #f0f8ff; /* Ganti warna background */
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+        }
+
+        h1 {
+            font-size: 36px; /* Ukuran teks judul */
+            color: #2c3e50;
+        }
+
+        p {
+            font-size: 18px; /* Ukuran teks paragraf */
+            color: #34495e;
+        }
+
+        .biodata-container {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            max-width: 600px;
+            margin: auto;
+        }
+
+        img {
+            width: 150px;
+            border: 3px solid #2980b9; /* Border pada foto */
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+
+        form {
+            margin-top: 30px;
+            padding: 20px;
+            border: 2px solid #bdc3c7; /* Border pada form */
+            border-radius: 8px;
+            background-color: #ecf0f1;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        button {
+            background-color: #2980b9;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #3498db;
+        }
+        </style>
+</head>
+<body>
+    </style>
     <body>
        <h1>Biodata Pribadi</h1> 
        <p>Mahasiswa Semester 2 Jurusan Sistem Informasi</p>
